# docs/swagger.json
@@ -6,8 +6,100 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:82",
     "paths": {
+        "/api/v1/decks/{deckId}/shuffle": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Перемешать вопросы в колоде и начать сначала",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Client id",
+                        "name": "clientId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Deck id",
+                        "name": "deckId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v1/levels/{levelId}/shuffle": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Перемешать вопросы в уровне и начать сначала",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Client id",
+                        "name": "clientId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Level id",
+                        "name": "levelId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v1/question": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Получить рандомный вопрос",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "client id",
+                        "name": "client_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "level id",
+                        "name": "level_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/adapters.QuestionOutput"
+                        }
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Do ping desc",
@@ -64,64 +156,6 @@
                     }
                 }
             }
-        },
-        "/v1/decks/{deckId}/shuffle": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Перемешать вопросы в колоде и начать сначала",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Client id",
-                        "name": "clientId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Deck id",
-                        "name": "deckId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
-        "/v1/levels/{levelId}/shuffle": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Перемешать вопросы в уровне и начать сначала",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Client id",
-                        "name": "clientId",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Level id",
-                        "name": "levelId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -159,6 +193,26 @@
                 },
                 "ok": {
                     "type": "boolean"
+                }
+            }
+        },
+        "adapters.QuestionOutput": {
+            "type": "object",
+            "properties": {
+                "additional_text": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_last": {
+                    "type": "boolean"
+                },
+                "level_id": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
                 }
             }
         }
